Revision history for {{ $dist->name }}

{{$NEXT}}
  [Enhancements]
  - Improved internals.

  [Documentation]
  - Bump copyright year.

v0.7.0    2023-06-02 17:29:04+01:00 Europe/London
  [Incompatible Changes]
  - Upgraded the minimum Perl version to v5.14.

  [Bug Fixes]
  - Improved regular expressions to only match ASCII digits.

  [Documentation]
  - Documented support policy for older Perls.

  - Bump copyright year.

v0.6.1    2022-09-04 15:58:06+01:00 Europe/London
  [Other]
  - Specify minimum version of Exporter.

  - Update MANIFEST.SKIP rules.

  - Sign release.

v0.6.0    2022-04-23 12:53:00+01:00 Europe/London
  [Enhancements]
  - Recognise some types from Types::DateTime.

  - Recognise InstanceOf['Date'].

  [Bug Fixes]
  - Use "timestamp" type instead of "datetime" type for various DateTime-like objects.

  - column_info_from_type will use internally configured types before guessing about the type.

v0.5.0    2022-04-21 17:13:34+01:00 Europe/London
  [Incompatibilies]
  - Support for Perls before v5.10 has been removed.

  - Size parameters of 0 will not be overridden, and may throw errors.

v0.4.1    2022-04-21 14:00:49+01:00 Europe/London
  [Bug Fixes]
  - Char with no size parameter should default to 1. N.B. this may be an incompatible change.

  [Documentation]
  - Bumped copyright year.

  - Fix encoding of links in README.

  [Toolchain]
  - Removed use of Travis CI.

  - Remove bad MANIFEST.SKIP rule.

v0.4.0    2018-12-04 10:36:59+00:00 Europe/London
  [Enhancements]
  - Added SmallInt, BigInt.

  [Documentation]
  - Updated Changes to refer to GitHub issues.

  - Fixed typo in POD.

  - Clarify relationship between some constrained types.

  [Tests]
  - Cleaned up test prereqs.

  [Other]
  - Minor code improvements.

v0.3.1    2018-11-18 11:46:52+00:00 Europe/London
  [Enhancements]
  - InstanceOf['JSON::PP::Boolean', 'Types::Serialiser::Boolean'] can be
    translated.

  [Bug Fixes]